k8s/services/inventory-service/homol/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service-homol
  labels:
    app: inventory-service-homol
    environment: homol
spec:
  type: ClusterIP
  selector:
    app: inventory-service-homol
  ports:
    - name: http
      port: 3000
      targetPort: http
