k8s/services/inventory-service/homol/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-service-homol
  labels:
    app: inventory-service-homol
    environment: homol
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: homol.devops.local
      http:
        paths:
          - path: /api/inventories(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: inventory-service-homol
                port:
                  number: 3000
